added score, timer, initial

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <p>Here, you'll be given a series of multiple choice questions asking you the capital city of a country.<br>
                     Please select only "ONE" correct answer. You are given total of 100 seconds to answer all the questions.<br>
                     Keep in mind, a wrong answer will penalize your time by 10 second. 
-                    Each correct answer will yield 10 pionts toward your final score, and each remain second will be added to your final score as well.<br>Good Luck! </p>
+                    Each correct answer will yield 10 pionts toward your final score.<br>Good Luck! </p>
                 <button id = "start">Let's Go!</button>
             </div>
             <div class="qScreen">
@@ -34,7 +34,8 @@
             </div>
             <div class="endScreen">
                 <div class="showScore"></div>
-                <input id="userInitial" type="text" placeholder="Please type your initinal" />
+                <input id="userInitial" type="text" placeholder="Please enter your initinal" />
+                <button id="tryAgain">Let's Try Again!</button>
             </div>
         </div>
 
