--- a/index.html
+++ b/index.html
@@ -9,17 +9,23 @@
         <link rel="stylesheet" href="./Assets/css/style.css">
     </head>
     <body>
-        <div class="scores">View Highscores</div>
+        <div class="viewScores">View Highscores
+            <div class="preAttemptRec">
+                <div>Previous Attempt</div>
+                <div class="preAttempt"></div>
+                <!-- <button id="closeBtn">Close</button> -->
+            </div>
+        </div>
 
         <div class="timer">You have 100 seconds </div>
 
         <div class="container">
             <div class="startScreen">
                 <h1>Welcome To The Challenge!</h1>
-                <p>Here, you'll be given a series of multiple choice questions asking you the capital city of a country.<br>
-                    Please select only "ONE" correct answer. You are given total of 100 seconds to answer all the questions.<br>
-                    Keep in mind, a wrong answer will penalize your time by 10 second. 
-                    Each correct answer will yield 10 pionts toward your final score.<br>Good Luck! </p>
+                <p>Here, you'll be given a series of multiple choice questions asking you the capital city of a country. 
+                    Please select only "ONE" correct answer.<br>You are given a total of 100 seconds to answer all the questions.
+                    Keep in mind, a wrong answer will penalize your time by 10 seconds. 
+                    Each correct answer will yield 10 points toward your final score.<br>Good Luck! </p>
                 <button id = "start">Let's Go!</button>
             </div>
             <div class="qScreen">
@@ -34,7 +40,10 @@
             </div>
             <div class="endScreen">
                 <div class="showScore"></div>
-                <input id="userInitial" type="text" placeholder="Please enter your initinal" />
+                <div class="userInitial">
+                    <input id="userInitial" type="text" placeholder="Please enter your initinal" />
+                    <button id="submit">submit</button>
+                </div>
                 <button id="tryAgain">Let's Try Again!</button>
             </div>
         </div>
